controller images in description

--- a/src/scss/custom/_catalogue.scss
+++ b/src/scss/custom/_catalogue.scss
@@ -206,3 +206,8 @@ $grip-col-min-max: minmax(50px, 200px);
         word-wrap: break-word;
     }
 }
+
+.descrip-img {
+    max-height: 1.5rem;
+    padding: 0 0.25rem;
+}
