--- a/src/scss/custom/_catalogue.scss
+++ b/src/scss/custom/_catalogue.scss
@@ -31,7 +31,21 @@ $gen-item-radius: 2px;
     }
 }
 
-.game-item-list>div>div>div {
+.generic-item-image-container {
+    aspect-ratio: 1/1;
+    padding: 0;
+
+    > .lazy-load-image-background,
+    > .lazy-load-image-loaded {
+        width: 100%;
+
+        img {
+            width: 100%;
+        }
+    }
+}
+
+.game-item-list > div > div > div {
     padding-top: 1em;
     padding-bottom: 3em;
     margin-bottom: 3em;
@@ -136,7 +150,7 @@ $gen-item-radius: 2px;
                 order: 1;
             }
 
-            >span {
+            > span {
                 width: 100%;
             }
         }
