better controller lookups

--- a/webpack/handlebar/itemDetailPage.hbs
+++ b/webpack/handlebar/itemDetailPage.hbs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>{{data.Name}} - Assistant for No Man's Sky</title>
+    <title>Assistant for No Man's Sky</title>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#{{data.Colour}}" />
@@ -13,7 +13,7 @@
     <link rel="preload" href="/assets/images/loader.svg" as="image">
 
     <link type="text/plain" rel="author" href="/humans.txt" />
-    <meta name="application-name" content="{{data.Name}} - Assistant for No Man&#39;s Sky">
+    <meta name="application-name" content="Assistant for No Man&#39;s Sky">
     <meta name="theme-color" content="#{{data.Colour}}">
     <meta name="description" content="{{data.Description}}">
     <meta name="robots" content="index,follow">
@@ -27,27 +27,27 @@
     <link rel="canonical" href="https://nmsassistant.com">
     <link rel="author" href="humans.txt">
     <link rel="me" href="https://kurtlourens.com" type="text/html">
-    <link rel="me" href="mailto:nms@kurtlourens.com">
+    <link rel="me" href="mailto:support@nmsassistant.com">
     <link rel="index" href="https://nmsassistant.com/">
 
     <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="{{data.Name}} - Assistant for No Man&#39;s Sky">
+    <meta itemprop="name" content="{{data.Name}}">
     <meta itemprop="description" content="{{data.Description}}">
     <meta itemprop="image" content="{{data.Icon}}">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://nmsassistant.com">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="{{data.Name}} - Assistant for No Man&#39;s Sky">
+    <meta property="og:title" content="{{data.Name}}">
     <meta property="og:locale" content="en_US">
     <meta property="og:description" content="{{data.Description}}">
-    <meta property="og:site_name" content="{{data.Name}} - Assistant for No Man&#39;s Sky">
+    <meta property="og:site_name" content="{{data.Name}}">
     <meta property="og:image" content="{{data.Icon}}">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:site" content="@AssistantNMS">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="{{data.Name}} - Assistant for No Man&#39;s Sky">
+    <meta name="twitter:title" content="{{data.Name}}">
     <meta name="twitter:description" content="{{data.Description}}">
     <meta name="twitter:image" content="{{data.Icon}}">
     <!-- Meta Tags Generated via http://heymeta.com -->
@@ -57,7 +57,7 @@
     <meta name="apple-itunes-app" content="app-id=id1480287625,app-argument=assistantNMSWeb">
     <link rel="apple-touch-icon" sizes="180x180" href="{{data.Icon}}">
     <!-- <link rel="apple-touch-startup-image" href="/path/to/launch.png"> -->
-    <meta name="apple-mobile-web-app-title" content="{{data.Name}} - Assistant for No Man&#39;s Sky">
+    <meta name="apple-mobile-web-app-title" content="{{data.Name}}">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="alternate" href="ios-app://id1480287625/assistantNMSWeb">
