--- a/src/scss/custom/_theme.scss
+++ b/src/scss/custom/_theme.scss
@@ -41,6 +41,10 @@ body {
             }
         }
 
+        .consumable-rewards {
+            background-color: darken($list-item-background-color-dark, 17%);
+        }
+
         .card,
         .catalogue-item {
             background-color: $card-background-color-dark;
