--- a/src/scss/custom/_catalogue.scss
+++ b/src/scss/custom/_catalogue.scss
@@ -231,3 +231,12 @@ $gen-item-radius: 2px;
     max-height: 1.5rem;
     padding: 0 0.25rem;
 }
+
+.consumable-rewards {
+    display: inline-block;
+    padding: 0.5em 0.75em;
+    border-radius: 0.5em;
+    * {
+        padding: 0;
+    }
+}
