make use of slots on the webComponents

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,3 +1,4 @@
+$defaultFont: "Roboto", Helvetica, Arial, sans-serif !important;
 $nmsAlphaThemed: "NMSFuturaProBook", Helvetica, sans-serif !important;
 $expAlphaThemed: "NMSExpeditionAlphabet", Helvetica, sans-serif !important;
 
