--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -19,6 +19,7 @@ $expAlphaThemed: "NMSExpeditionAlphabet", Helvetica, sans-serif !important;
 @import "./custom/sidebar";
 @import "./custom/searchBar";
 @import "./custom/shareButton";
+@import "./custom/title";
 
 @import "./custom/catalogue";
 
