--- a/webpack/handlebar/itemDetailPage.hbs
+++ b/webpack/handlebar/itemDetailPage.hbs
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <title>Assistant for No Man's Sky</title>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#{{data.Colour}}" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="https://nmsassistant.com/manifest.json" />
 
     <link rel="preload" href="/assets/images/loader.svg" as="image">
