--- a/src/scss/custom/_catalogue.scss
+++ b/src/scss/custom/_catalogue.scss
@@ -45,6 +45,18 @@ $gen-item-radius: 2px;
     }
 }
 
+.contributor.gen-item-container {
+    .lazy-load-image-loaded {
+        width: 100%;
+        height: 100%;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+}
+
 .game-item-list > div > div > div {
     padding-top: 1em;
     padding-bottom: 3em;
