--- a/src/scss/custom/_theme.scss
+++ b/src/scss/custom/_theme.scss
@@ -95,8 +95,8 @@ body {
             margin-top: 1em;
         }
 
-        .table > thead > tr > th,
-        .table > tbody > tr > td {
+        .table>thead>tr>th,
+        .table>tbody>tr>td {
             border-color: white;
         }
     }
@@ -129,7 +129,7 @@ body {
             color: white;
         }
 
-        li.active > a {
+        li.active>a {
             background-color: $brand-primary;
         }
     }
@@ -138,7 +138,7 @@ body {
         input {
             color: $white-color;
             background-image: linear-gradient(to top, #{$brand-primary} 2px, rgba(63, 81, 181, 0) 2px),
-                linear-gradient(to top, #{$white-color} 1px, rgba(210, 210, 210, 0) 1px);
+            linear-gradient(to top, #{$white-color} 1px, rgba(210, 210, 210, 0) 1px);
 
             $placeholderColor: rgba(255, 255, 255, 0.9);
             $placeholderFontSize: 0.75em;
@@ -226,10 +226,15 @@ body {
     .customButton {
         background-color: $brand-secondary;
         color: black;
+
+        &.disabled {
+            opacity: 0.3;
+            text-decoration: line-through;
+        }
     }
 
     .discussion {
-        > .bubble.sender {
+        >.bubble.sender {
             background-color: #606060;
             color: #fff;
 
@@ -238,7 +243,7 @@ body {
             }
         }
 
-        > .bubble.recipient {
+        >.bubble.recipient {
             background-color: $brand-primary;
 
             &:before {
@@ -246,7 +251,7 @@ body {
             }
         }
 
-        > .bubble.option {
+        >.bubble.option {
             background-color: $brand-secondary;
             color: black;
         }
