StarshipScrap page and item detail tiles

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -22,6 +22,7 @@ sans-serif !important;
 @import "./custom/alert";
 @import "./custom/social";
 @import "./custom/expedition";
+@import "./custom/starship";
 @import "./custom/ribbon";
 @import "./custom/general";
 @import "./custom/scrollbar";
