better chip colour

--- a/src/scss/custom/_theme.scss
+++ b/src/scss/custom/_theme.scss
@@ -87,7 +87,7 @@ body {
 
             &.secondary {
                 background-color: $brand-secondary;
-                color: white;
+                color: black;
             }
         }
 
@@ -117,7 +117,7 @@ body {
         }
 
         .badge-container {
-            color: $list-item-text-color-dark;
+            color: black;
             background-color: $brand-secondary;
         }
     }
