added cooking tile

--- a/src/scss/custom/_catalogue.scss
+++ b/src/scss/custom/_catalogue.scss
@@ -35,8 +35,8 @@ $gen-item-radius: 2px;
     aspect-ratio: 1/1;
     padding: 0;
 
-    >.lazy-load-image-background,
-    >.lazy-load-image-loaded {
+    > .lazy-load-image-background,
+    > .lazy-load-image-loaded {
         width: 100%;
 
         img {
@@ -58,7 +58,7 @@ $gen-item-radius: 2px;
     }
 }
 
-.game-item-list>div>div>div {
+.game-item-list > div > div > div {
     padding-top: 1em;
     padding-bottom: 3em;
     margin-bottom: 3em;
@@ -163,7 +163,7 @@ $gen-item-radius: 2px;
                 order: 1;
             }
 
-            >span {
+            > span {
                 width: 100%;
             }
         }
@@ -249,6 +249,7 @@ $gen-item-radius: 2px;
     display: inline-block;
     padding: 0.5em 0.75em;
     border-radius: 0.5em;
+    margin-bottom: 0.5em;
 
     * {
         padding: 0;
