--- a/src/scss/custom/_theme.scss
+++ b/src/scss/custom/_theme.scss
@@ -91,12 +91,16 @@ body {
             }
         }
 
+        .material-icons.secondary {
+            color: $brand-secondary;
+        }
+
         .table {
             margin-top: 1em;
         }
 
-        .table>thead>tr>th,
-        .table>tbody>tr>td {
+        .table > thead > tr > th,
+        .table > tbody > tr > td {
             border-color: white;
         }
     }
@@ -129,7 +133,7 @@ body {
             color: white;
         }
 
-        li.active>a {
+        li.active > a {
             background-color: $brand-primary;
         }
     }
@@ -138,7 +142,7 @@ body {
         input {
             color: $white-color;
             background-image: linear-gradient(to top, #{$brand-primary} 2px, rgba(63, 81, 181, 0) 2px),
-            linear-gradient(to top, #{$white-color} 1px, rgba(210, 210, 210, 0) 1px);
+                linear-gradient(to top, #{$white-color} 1px, rgba(210, 210, 210, 0) 1px);
 
             $placeholderColor: rgba(255, 255, 255, 0.9);
             $placeholderFontSize: 0.75em;
@@ -234,7 +238,7 @@ body {
     }
 
     .discussion {
-        >.bubble.sender {
+        > .bubble.sender {
             background-color: #606060;
             color: #fff;
 
@@ -243,7 +247,7 @@ body {
             }
         }
 
-        >.bubble.recipient {
+        > .bubble.recipient {
             background-color: $brand-primary;
 
             &:before {
@@ -251,7 +255,7 @@ body {
             }
         }
 
-        >.bubble.option {
+        > .bubble.option {
             background-color: $brand-secondary;
             color: black;
         }
