fix bottom modal bug caused by expedition bottom modal

--- a/src/scss/custom/_expedition.scss
+++ b/src/scss/custom/_expedition.scss
@@ -184,6 +184,14 @@
     }
 }
 
+.expedition-bottom-modal-sheet {
+    .react-modal-sheet-container {
+        .react-modal-sheet-content {
+            overflow: visible !important;
+        }
+    }
+}
+
 #app .chip.exp-alpha {
     margin: 0 0 1em 0;
 
