--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -14,6 +14,7 @@ sans-serif !important;
 @import "./custom/segmentedControl";
 @import "./custom/nmsfmPresenter";
 @import "./custom/weekendMissionMenu";
+@import "./custom/community";
 @import "./custom/timeline";
 @import "./custom/tree";
 @import "./custom/chip";
