--- a/webpack/handlebar/site.webmanifest.hbs
+++ b/webpack/handlebar/site.webmanifest.hbs
@@ -6,7 +6,7 @@
 "manifest_version": 2,
 "version": "{{version}}",
 "background_color": "#1b1f22",
-"theme_color": "{{theme.colour}}",
+"theme_color": "{{meta.colour}}",
 "display": "standalone",
 "scope": "/",
 "start_url": "/?standalone",
