--- a/src/scss/custom/_community.scss
+++ b/src/scss/custom/_community.scss
@@ -3,6 +3,7 @@
     padding-right: 0;
     padding-bottom: 1em;
     border-radius: 0.5em;
+    margin-bottom: 0.5em;
 
     .image-container {
         height: unset;
