👽️ Replace segmented control with custom built one

--- a/src/scss/custom/_theme.scss
+++ b/src/scss/custom/_theme.scss
@@ -197,6 +197,10 @@ body {
         label {
             color: $brand-secondary;
         }
+
+        .active label {
+            color: black;
+        }
     }
 
     .progress.custom {
