--- a/src/scss/custom/_segmentedControl.scss
+++ b/src/scss/custom/_segmentedControl.scss
@@ -1,14 +1,91 @@
+$segmented-control-border-radius: 5px;
+
 .segmented-control {
     color: $brand-secondary;
     transition-duration: unset;
+    --highlight-width: auto;
+    --highlight-x-pos: 0;
+
+    display: flex;
 
     label {
-        color: $brand-secondary;
-        border: 1px solid currentColor;
-        border-top-width: 0px;
-        border-bottom-width: 0px;
         font-size: 1.25em;
         margin: 0;
         padding: 0;
+    }
+
+    .selected-item {
+        text-align: center;
+    }
+
+    .controls {
+        display: inline-flex;
+        justify-content: space-between;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        border-radius: $segmented-control-border-radius;
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+
+        input {
+            opacity: 0;
+            margin: 0;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            position: absolute;
+            width: 100%;
+            cursor: pointer;
+            height: 100%;
+        }
+    }
+
+    .segment {
+        /* width: 100%; uncomment for each segment to have matching width */
+        border: 1px solid $brand-secondary;
+        min-width: 120px;
+        position: relative;
+        text-align: center;
+        z-index: 1;
+
+        &:first-child {
+            border-top-left-radius: $segmented-control-border-radius;
+            border-bottom-left-radius: $segmented-control-border-radius;
+        }
+
+        &:last-child {
+            border-top-right-radius: $segmented-control-border-radius;
+            border-bottom-right-radius: $segmented-control-border-radius;
+        }
+
+        label {
+            cursor: pointer;
+            display: block;
+            font-weight: 700;
+            padding: 0.75em 2em;
+            transition: color 0.5s ease;
+        }
+    }
+
+    .controls::before {
+        content: "";
+        background: $brand-secondary;
+        // border-radius: 8px;
+        width: calc(var(--highlight-width) + 2px);
+        transform: translateX(var(--highlight-x-pos));
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: -1px;
+        z-index: 0;
+    }
+
+    /* Only allow transitions once component is ready */
+    .controls.ready::before {
+        transition: transform 0.3s ease, width 0.3s ease;
+    }
+    .controls.idle {
+        opacity: 0.01;
     }
 }
