✨ Modal to push mobile users to use the apps | Closes #21

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -23,6 +23,7 @@ $expAlphaThemed: "NMSExpeditionAlphabet", Helvetica, sans-serif !important;
 @import "./custom/sidebar";
 @import "./custom/searchBar";
 @import "./custom/shareButton";
+@import "./custom/mobile";
 @import "./custom/title";
 @import "./custom/fab";
 
