--- a/src/scss/custom/_theme.scss
+++ b/src/scss/custom/_theme.scss
@@ -105,8 +105,17 @@ body {
         }
     }
 
+    .community-search-card-bg .community-search-card,
     .generic-item-list .gen-item .gen-item-container {
         background-color: $list-item-background-color-dark;
+        // opacity: 1;
+        transition: background-color 250ms ease-in-out;
+
+        &:hover {
+            background-color: lighten($list-item-background-color-dark, 2%);
+            // opacity: 0.9;
+            // box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.1);
+        }
 
         .gen-item-content-container .text-container {
             color: $list-item-text-color-dark;
@@ -271,6 +280,12 @@ body {
         &.dark {
             color: #606060;
         }
+    }
+
+    .community-search-card-bg .community-search-card .community-search-chip,
+    .community-search-bottom-modal-sheet .community-search-chip {
+        background-color: lighten($brand-secondary, 10%);
+        color: #000;
     }
 }
 
