✨ Add Contributors page | Closes #5

--- a/src/scss/custom/_community.scss
+++ b/src/scss/custom/_community.scss
@@ -177,3 +177,9 @@ $community-search-modal-icon-size: 2.5em;
         margin-left: 7px;
     }
 }
+
+.donation-tile {
+    img {
+        padding-top: 25px;
+    }
+}
