--- a/src/scss/custom/_portal.scss
+++ b/src/scss/custom/_portal.scss
@@ -8,7 +8,7 @@
     }
 
     .glyphgrid {
-        >div {
+        > div {
             padding: 0;
         }
 
@@ -27,8 +27,8 @@
 
     .action-container {
         position: absolute;
-        bottom: .5em;
-        right: .5em;
+        bottom: 0.5em;
+        right: 0.5em;
 
         @media (max-width: 400px) {
             position: relative;
@@ -42,9 +42,9 @@
             display: flex;
             flex-direction: column;
 
-            >* {
-                margin-top: .25em;
-                margin-right: .5em;
+            > * {
+                margin-top: 0.25em;
+                margin-right: 0.5em;
                 display: block;
                 color: white;
             }
@@ -54,7 +54,7 @@
                 flex-direction: unset;
                 margin-top: 1em;
 
-                >* {
+                > * {
                     display: inline;
                 }
             }
@@ -62,6 +62,72 @@
     }
 
     .chip {
-        padding: .5em 1em;
+        padding: 0.5em 1em;
+    }
+}
+
+@keyframes wheel-scroll {
+    0% {
+        top: 100%;
+    }
+
+    100% {
+        top: -1100%;
+    }
+}
+
+.slots {
+    max-width: 1000px !important;
+    margin: 1em auto;
+
+    .generic-item-list {
+        margin: auto;
+    }
+}
+
+.portal-slot {
+    margin-bottom: 1em;
+}
+
+.portal-slot-wheel {
+    position: relative;
+
+    .wheel-content {
+        position: relative;
+        overflow: hidden;
+
+        .portal-slot-item-placeholder {
+            max-width: 100%;
+            aspect-ratio: 0.75;
+        }
+
+        img {
+            width: 100%;
+        }
+
+        .disc {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            padding: 0.125em;
+
+            // transform: rotate3d(1, 0, 0, -330deg);
+            transition: all 2s cubic-bezier(0.55, -0.4, 0.42, 1.55);
+
+            .portal-slot-item:first-child {
+                margin-top: 0;
+            }
+
+            .portal-slot-item {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                border-radius: 1em;
+                width: 100%;
+                aspect-ratio: 0.75;
+                margin: 0.75em 0;
+            }
+        }
     }
 }
