make dialog dark (checked checkboxes missing)

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -26,7 +26,7 @@ $expAlphaThemed: "NMSExpeditionAlphabet", Helvetica, sans-serif !important;
 @import "./custom/mobile";
 @import "./custom/title";
 @import "./custom/fab";
-@import "./custom/_sweetalertDark";
+@import "./custom/sweetalertDark";
 
 @import "./custom/catalogue";
 
