--- a/src/scss/custom/_theme.scss
+++ b/src/scss/custom/_theme.scss
@@ -292,7 +292,7 @@ body {
         color: $body-color;
 
         &.dark {
-            color: #606060;
+            color: #fff;
         }
     }
 
