--- a/src/scss/custom/_shareButton.scss
+++ b/src/scss/custom/_shareButton.scss
@@ -47,7 +47,7 @@
     }
 
     .form-control {
-        color: #4e4e4e;
+        color: #fff;
         font-size: 1.25em;
         text-align: center;
     }
@@ -61,8 +61,8 @@
 }
 
 .share {
-    background: #444;
-    box-shadow: 0 4px 0 #2a2a2a;
+    background: #333;
+    box-shadow: 0 4px 0 #222;
 }
 
 .twitter {
