--- a/src/scss/material-dashboard/variables/_bootstrap-material-design-base.scss
+++ b/src/scss/material-dashboard/variables/_bootstrap-material-design-base.scss
@@ -30,4 +30,4 @@ $mdb-text-color-primary-hex: $black !default; // for contrast function in invers
 $icon-color: rgba(0,0,0,0.5) !default;
 
 $mdb-label-color: unquote("rgba(#{$rgb-black}, 0.26)") !default;
-$mdb-label-color-toggle-focus: unquote("rgba(#{$rgb-black}, .54)") !default;
+$mdb-label-color-toggle-focus: unquote("rgba(#{$rgb-white}, .54)") !default;
