--- a/src/scss/material-dashboard/variables/_forms.scss
+++ b/src/scss/material-dashboard/variables/_forms.scss
@@ -5,7 +5,7 @@ $input-bg: rgba($black, 0) !default; // #fff !default;
 $input-bg-disabled: rgba($black, 0) !default; // $gray-lighter !default;
 //
 //$input-color:                    $gray !default;
-$input-border-color: #d2d2d2 !default; // #ccc !default;
+$input-border-color: #AAA !default; // #ccc !default;
 $input-border-color-white: #FFFFFF !default;
 
 //$input-btn-border-width:         $border-width !default; // For form controls and buttons
