--- a/src/scss/custom/_theme.scss
+++ b/src/scss/custom/_theme.scss
@@ -99,8 +99,8 @@ body {
             margin-top: 1em;
         }
 
-        .table > thead > tr > th,
-        .table > tbody > tr > td {
+        .table>thead>tr>th,
+        .table>tbody>tr>td {
             border-color: white;
         }
     }
@@ -142,13 +142,14 @@ body {
             color: white;
         }
 
-        li.active > a {
+        li.active>a {
             background-color: $brand-primary;
         }
 
         .nav-item:not(.active) {
             .nav-link {
                 transition: all 250ms ease-in-out;
+
                 &:hover {
                     background: #424242;
                 }
@@ -160,7 +161,7 @@ body {
         input {
             color: $white-color;
             background-image: linear-gradient(to top, #{$brand-primary} 2px, rgba(63, 81, 181, 0) 2px),
-                linear-gradient(to top, #{$white-color} 1px, rgba(210, 210, 210, 0) 1px);
+            linear-gradient(to top, #{$white-color} 1px, rgba(210, 210, 210, 0) 1px);
 
             $placeholderColor: rgba(255, 255, 255, 0.9);
             $placeholderFontSize: 0.75em;
@@ -265,7 +266,7 @@ body {
     }
 
     .discussion {
-        > .bubble.sender {
+        >.bubble.sender {
             background-color: #606060;
             color: #fff;
 
@@ -274,7 +275,7 @@ body {
             }
         }
 
-        > .bubble.recipient {
+        >.bubble.recipient {
             background-color: $brand-primary;
 
             &:before {
@@ -282,7 +283,7 @@ body {
             }
         }
 
-        > .bubble.option {
+        >.bubble.option {
             background-color: $brand-secondary;
             color: black;
         }
@@ -307,6 +308,14 @@ body {
             border: 1px solid $brand-secondary;
             background-color: $brand-primary-background !important;
         }
+    }
+
+    .form-check .form-check-input:checked+.form-check-sign .check:before {
+        color: #4a4a4a;
+    }
+
+    .form-check .form-check-input:checked+.form-check-sign .check {
+        background: lighten($brand-primary, 10%);
     }
 }
 
